# gk1-opengl

./: CMakeLists.txt  README.md
glad/include/glad/: glad.h
glad/src/: glad.c
shaders/: constant_fragment_shader.frag  fragment_shader.frag  gouraud_vertex_shader.vert  vertex_shader.vert
src/: Bee.cpp  Bee.h  Garden.cpp  Garden.h  Model.cpp  Model.h  ObjLoader.cpp  ObjLoader.h  Shader.cpp  Shader.h  Window.cpp  Window.h  fragment_shader.frag  main.cpp  structs.h  vertex_shader.vert
